--- a/BibliotecaJM/BibliotecaJM.csproj
+++ b/BibliotecaJM/BibliotecaJM.csproj
@@ -127,6 +127,12 @@
     <Compile Include="FM_Listados.Designer.cs">
       <DependentUpon>FM_Listados.cs</DependentUpon>
     </Compile>
+    <Compile Include="FM_Login.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FM_Login.Designer.cs">
+      <DependentUpon>FM_Login.cs</DependentUpon>
+    </Compile>
     <Compile Include="FM_Modelo.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -156,6 +162,9 @@
     <Compile Include="UsuarioActual.cs" />
     <EmbeddedResource Include="FM_Lectores.resx">
       <DependentUpon>FM_Lectores.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FM_Login.resx">
+      <DependentUpon>FM_Login.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FM_Modelo.resx">
       <DependentUpon>FM_Modelo.cs</DependentUpon>
