--- a/BibliotecaJM/BibliotecaJM.csproj
+++ b/BibliotecaJM/BibliotecaJM.csproj
@@ -172,6 +172,9 @@
     <EmbeddedResource Include="FM_Lectores.resx">
       <DependentUpon>FM_Lectores.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FM_Libros.resx">
+      <DependentUpon>FM_Libros.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FM_Login.resx">
       <DependentUpon>FM_Login.cs</DependentUpon>
     </EmbeddedResource>
